--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 body {
+    background-image: url(ramadan.png);
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    height: 100vh;
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
     text-align: center;
     background-color: lavender;
